# python-learning

./: .gitignore  pyproject.toml  python-cheatsheet.ipynb  python-reference-guide.ipynb
data/: currency_conversion.csv  people.json  products.csv  purchases_1.json  purchases_2.json  purchases_3.json  purchases_4.json  purchases_5.json  purchases_item_price.csv  sales.csv  sql_customers.csv  sql_transactions.csv  web_input.csv  web_output.csv
decorators/: decorators_cheatsheet.ipynb
generators/: lazy-list-generation.ipynb  yields.py
notebook/: any.ipynb
notebooks/: any.ipynb  consume-rest-api.ipynb  dates.ipynb  jira_extract_issues.ipynb  jira_extract_issues_to_spark.ipynb  pipedrive-test-drive.ipynb  send_smtp_mail.ipynb
oo/: inheritance.py  modelo.py
oo/package/: main.py
pandas/: cheatsheet.ipynb  merge_csvs.py  most_sold_total_price.ipynb  pandas-purchases.ipynb  pandas_invalid_data.ipynb  pandas_reference_guide.ipynb  pandas_web_input_to_output.ipynb
pandas/netflix_sample/: README.pd  pandas_analysis.ipynb  pandas_netflix_analysis_v2.ipynb
spark/: claude_challenges.ipynb  list_to_datafame.ipynb  pipedrive_dealfields_to_dataframe.ipynb  pipedrive_deals_to_dataframe.ipynb  pipedrive_user_to_dataframe.ipynb  read_files.ipynb  spark-huge-csv.ipynb  spark-purchases.ipynb  spark_delta.ipynb  spark_delta_lake_example.ipynb  spark_invalid_data.ipynb  spark_netflix_analysis_v2.ipynb  spark_web_input_to_output.ipynb
spark/data/: pipedrive_deal_fields.json  pipedrive_deals.json  pipedrive_users.json
spark/xp-pos-engenharia/: LINK_ARQUIVOS.md  cache.ipynb  (+9 more)
(+12 files in other folders)
